@@ -1,5 +1,8 @@
 2006-11-03  Miguel Sofer  <msofer@users.sf.net>
 
+	* generic/tclBasic.c (TEOVI): fix por possible leak of a Command
+	in the presence of execution traces that delete it.
+
 	* generic/tclBasic.c (TEOVI):
 	* tests/trace.test (trace-21.11): fix for [Bug 1590232], execution
 	traces may cause a second command resolution in the wrong
